fix(css/requesters): left-align stats column
Improves readability in the 2 column layout, though global
definition is still center aligned which is more readable
in a 3 column flex container. May need to consider collapsing it
into 2 columns.

 See #7

--- a/app/assets/stylesheets/requesters/show.sass
+++ b/app/assets/stylesheets/requesters/show.sass
@@ -8,6 +8,8 @@
     flex: 2
   .col-1
     margin-right: 15px
+  .col-stats
+    text-align: left
 
   .requester-summary
     a
